syntax = "proto3";

package bst.v1;

import "bst/v1/area.proto";
import "bst/v1/content.proto";
import "bst/v1/user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

message Location {
  int32  id              = 1;
  string name            = 2;
  string additional_info = 3;
  Area   area            = 4;
  string map_url         = 5;
}

// Note: Will add more fields later (e.g. capacity, price, etc)
message StudioReview {
  User                      user       = 1;
  string                    review     = 2;
  int32                     rating     = 3;
  repeated Resource         resources  = 4;  // Photos of the studio...etc
  google.protobuf.Timestamp created_at = 5;
}

message Studio {
  int32  id                 = 1;
  string name               = 2;
  string description        = 3;
  string google_maps_url    = 4;
  string additional_info    = 5;
  Area   area               = 6;
  int32  overall_rating     = 7;  // Note: Rating logic is hidden in the backend
  repeated StudioRoom rooms = 8;
}

message StudioRoom {
  int32                   id       = 1;
  string                  name     = 2;
  int32                   capacity = 3;
  int32                   price    = 4;
  int32                   size     = 5;
  repeated StudioRoomInfo infos    = 6;
}

message StudioRoomInfo {
  int32 id = 1;

  // 情報の種類 (例: Equipment)"
  StudioRoomInfoType type = 2;

  // 情報のキー (例: ギターアンプ)"
  string key = 3;

  // 情報の値 (例: Marshall)"
  string value = 4;
}

message StudioRoomInfoType {
  int32  id   = 1;
  string name = 2;
}
